feat(swagger): convert profile request params to structs
